--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.26.0",
     "express": "^4.17.3",
+    "global": "^4.4.0",
     "luxon": "^2.3.0",
     "mongoose": "^6.2.2",
     "yup": "^0.32.11"
