--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "node-express-backend-app",
   "main": "index.js",
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "https://github.com/CodersCampCrew/Cookbook-Backend.git"
@@ -37,6 +38,7 @@
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.0",
     "eslint": "^8.9.0",
+    "eslint-config-google": "^0.14.0",
     "husky": "^7.0.4",
     "jest": "^27.5.1",
     "nodemon": "^2.0.15",
