--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,15 +1,21 @@
 {
     "env": {
+        "commonjs": true,
         "es2021": true,
         "node": true
     },
     "extends": [
+        "prettier",
         "google"
+    ],
+    "plugins": [
+        "prettier"
     ],
     "parserOptions": {
         "ecmaVersion": "latest",
         "sourceType": "module"
     },
     "rules": {
+        "prettier/prettier": "error"
     }
 }
