--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "start": "node index.js",
     "start-dev": "nodemon index.js",
     "build": "",
-    "test": "jest",
+    "test": "jest --config ./jest.config.json",
+    "test:watch": "yarn run test -- --watch",
     "unit": "",
     "coverage": "jest . --coverage",
     "lint": "eslint . --ext .js",
@@ -45,24 +46,5 @@
     "nodemon": "^2.0.15",
     "prettier": "^2.5.1",
     "supertest": "^6.2.2"
-  },
-  "browserlist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "jest": {
-    "testEnvironment": "node",
-    "coveragePathIgnorePatterns": [
-      "/node_modules",
-      ".vscode"
-    ]
   }
 }
