--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,6 @@ jobs:
   - name: Deploy to Heroku
     uses: akhileshns/heroku-deploy@v3.12.12
     with:
-      heroku_api_key: 
+      heroku_api_key: ${{secrets.HEROKU_API_KEY}}
       heroku_app_name: "cookbook-crew-backend"
       heroku_email: "krisgumularz@gmail.com"
