--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -14,3 +14,10 @@ jobs:
       - run: yarn install
       - run: yarn lint
       - run: yarn test
+  discord-notification:
+    - uses: sarisia/actions-status-discord@v1
+      if: job.test-pull-request.status == "success"
+      with:
+      webhook: ${{ secrets.DISCORD_WEBHOOK }}
+      title: 'pull-request'
+      descirpiton: 'New pull request in cookbook-backend repository'
