--- a/jest.config.json
+++ b/jest.config.json
@@ -1,8 +1,5 @@
 {
-    "testRegex": "((\\.|/*.)(spec))\\.js?$",
-    "testEnvironment": "node",
-    "coveragePathIgnorePatterns": [
-      "/node_modules",
-      ".vscode"
-    ]
+  "testRegex": "((\\.|/*.)(spec))\\.js?$",
+  "testEnvironment": "node",
+  "coveragePathIgnorePatterns": ["/node_modules", ".vscode"]
 }
