--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,8 +13,8 @@ jobs:
     uses: action/checkout@v2
     uses: action/setup-node@v1
     node-version: 16
-  - run: yarn run install
-  - run: yarn run build
+  - run: yarn install
+  - run: yarn build
   - name: Deploy to Heroku
     uses: akhileshns/heroku-deploy@v3.12.12
     with:
