--- a/.github/workflows/validateAndNotify.yml
+++ b/.github/workflows/validateAndNotify.yml
@@ -6,8 +6,8 @@ jobs:
   test-pull-request:
     runs-on: ubuntu-latest
     steps:
-      - uses: aciton/checkout@v2
-      - uses: aciton/setup-node@v1
+      - uses: action/checkout@v2
+      - uses: action/setup-node@v1
         with:
           node-version: 16
       - run: yarn install
