--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,8 +10,8 @@ jobs:
   runs-on: ubuntu-latest
   steps:
   - name: Check out repository
-    uses: action/checkout@v2
-    uses: action/setup-node@v1
+    uses: actions/checkout@v2
+    uses: actions/setup-node@v1
     node-version: 16
   - run: yarn install
   - run: yarn build
