Fixing CI workflow files

--- a/.github/workflows/validateAndNotify.yml
+++ b/.github/workflows/validateAndNotify.yml
@@ -6,6 +6,7 @@ jobs:
   test-pull-request:
     runs-on: ubuntu-latest
     steps:
+    name: Check out repository
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
@@ -14,9 +15,12 @@ jobs:
       - run: yarn lint
       - run: yarn test
   discord-notification:
+    runs-on: ubuntu-latest
+    steps:
     - uses: sarisia/actions-status-discord@v1
       if: job.test-pull-request.status == "success"
-      with:
-      webhook: ${{ secrets.DISCORD_WEBHOOK }}
-      title: 'pull-request'
-      descirpiton: 'New pull request in cookbook-backend repository'
+      env:
+        DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+      with:      
+        title: 'pull-request'
+        descirpiton: 'New pull request in cookbook-backend repository'
