--- a/package.json
+++ b/package.json
@@ -42,8 +42,12 @@
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^7.0.4",
     "jest": "^27.5.1",
+    "lint-staged": "^12.3.4",
     "nodemon": "^2.0.15",
     "prettier": "^2.5.1",
     "supertest": "^6.2.2"
+  },
+  "lint-staged": {
+    "*.js": "eslint --cache --fix"
   }
 }
