--- a/.github/workflows/validateAndNotify.yml
+++ b/.github/workflows/validateAndNotify.yml
@@ -17,9 +17,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: sarisia/actions-status-discord@v1
-        if: job.test-pull-request.status == 'success'
-        env:
-          DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+        if: always()
         with:
           title: 'pull-request'
           descirpiton: 'New pull request in cookbook-backend repository'
+          webhook: ${{ secrets.DISCORD_WEBHOOK }}
