--- a/.github/workflows/validateAndNotify.yml
+++ b/.github/workflows/validateAndNotify.yml
@@ -14,11 +14,13 @@ jobs:
       - run: yarn lint
       - run: yarn test
   discord-notification:
+    needs: [test-pull-request]
     runs-on: ubuntu-latest
     steps:
       - uses: sarisia/actions-status-discord@v1
         if: always()
+        env:
+          DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
         with:
-          title: 'pull-request'
-          description: 'New pull request in cookbook-backend repository'
-          webhook: ${{ secrets.DISCORD_WEBHOOK }}
+          title: "pull-request"
+          description: "New pull request in cookbook-backend repository"
