--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,7 @@
     "sourceType": "module"
   },
   "rules": {
-    "prettier/prettier": "error"
+    "prettier/prettier": "off",
+    "linebreak-style": "off"
   }
 }
