--- a/.github/workflows/validateAndNotify.yml
+++ b/.github/workflows/validateAndNotify.yml
@@ -18,7 +18,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: sarisia/actions-status-discord@v1
-        if: always()
+        if: github.event.pull_request.draft == false
         with:
           webhook: ${{ secrets.DISCORD_WEBHOOK }}
           title: "pull-request"
