--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,6 @@
   },
   "rules": {
     "prettier/prettier": ["error"],
-    "comma-dangle": ["error", "off"]
+    "comma-dangle": [{"error", "off"}]
   }
 }
