--- a/.eslintrc
+++ b/.eslintrc
@@ -12,7 +12,7 @@
     "sourceType": "module"
   },
   "rules": {
-    "prettier/prettier": ["error"],
-    "comma-dangle": ["off"]
+    "prettier/prettier": "error",
+    "comma-dangle": 0
   }
 }
