--- a/package.json
+++ b/package.json
@@ -17,9 +17,14 @@
     "yarn": ">= 1.20.0"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "express": "^4.17.3",
+    "express-flash": "^0.0.2",
+    "express-session": "^1.17.2",
     "luxon": "^2.3.0",
     "mongoose": "^6.2.2",
+    "passport": "^0.5.2",
+    "passport-local": "^1.0.0",
     "yup": "^0.32.11"
   },
   "scripts": {
