--- a/.eslintrc
+++ b/.eslintrc
@@ -12,7 +12,6 @@
     "sourceType": "module"
   },
   "rules": {
-    "prettier/prettier": "error",
-    "trailing-comma": "false"
+    "prettier/prettier": ["error", "never"]
   }
 }
