--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "express": "^4.17.3",
     "luxon": "^2.3.0",
     "mongoose": "^6.2.2",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "mongodb": "^4.3.1",
+    "dotenv": "^16.0.0"
   },
   "scripts": {
     "start": "yarn build && node ./build/index.js",
