--- a/.eslintrc
+++ b/.eslintrc
@@ -11,4 +11,10 @@
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
+  "rules": {
+    "linebreak-style": "off",
+    "object-curly-spacing": "off",
+    "comma-dangle": "off",
+    "require-jsdoc": "off"
+  }
 }
