--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "yup": "^0.32.11"
   },
   "scripts": {
-    "start": "yarn app/index.js",
+    "start": "node app/index.js",
     "dev": "nodemon ./app/index.js",
     "build": "babel ./app -d build",
     "test": "jest --passWithNoTests",
