--- a/.eslintrc
+++ b/.eslintrc
@@ -16,6 +16,7 @@
     "object-curly-spacing": "off",
     "comma-dangle": "off",
     "require-jsdoc": "off",
-    "no-unused-vars": "warn"
+    "no-unused-vars": "warn",
+    "indent": "off"
   }
 }
