--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,12 @@
 {
-    "presets": [
-      ["@babel/env", {
+  "presets": [
+    [
+      "@babel/env",
+      {
         "targets": {
           "node": "current"
         }
-      }]
+      }
     ]
-  }
+  ]
+}
