--- a/.eslintrc
+++ b/.eslintrc
@@ -7,15 +7,20 @@
   },
   "extends": ["prettier", "google"],
   "plugins": ["prettier"],
+  "parser": "@babel/eslint-parser",
   "parserOptions": {
     "ecmaVersion": "latest",
-    "sourceType": "module"
+    "sourceType": "module",
+    "babelOptions": {
+      "plugins": ["@babel/plugin-syntax-import-assertions"]
+    }
   },
   "rules": {
     "linebreak-style": "off",
     "object-curly-spacing": "off",
     "comma-dangle": "off",
     "require-jsdoc": "off",
-    "no-unused-vars": "warn"
+    "no-unused-vars": "warn",
+    "no-restricted-imports": "off"
   }
 }
